# aws-eks-balance-service-demo

./: .gitignore  Makefile  README.md
.codebuild/: buildspec.yml
apps/balance-gateway/: Dockerfile  README.md  pyproject.toml
apps/balance-gateway/app/: grpc_client.py  main.py  routes.py
apps/balance-service/: Dockerfile  README.md  pyproject.toml
apps/balance-service/app/: data.py  main.py  server.py
docs/: DEPLOYMENT_GUIDE.md
k8s/: balance-gateway-deployment.yml  balance-gateway-ingress.yml  balance-gateway-service.yml  balance-service-deployment.yml  balance-service-service.yml
proto/: README.md  balance.proto
scripts/: README.md  bootstrap.sh  cleanup.sh  generate_proto.sh  k8s_cleanup.sh  validate_prerequisites.sh
terraform/environments/dev/: backend.tf  main.tf  variables.tf
terraform/modules/eks/: codebuild.tf  ecr.tf  iam.tf  irsa.tf  main.tf  outputs.tf  variables.tf
terraform/modules/networking/: main.tf  outputs.tf  variables.tf
