[tool.poetry]
name = "balance-service"
version = "0.1.0"
description = "gRPC server for balance queries"
authors = []
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.62.0"
protobuf = "^4.25.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.62.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
